--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,10 @@
               data: window.answers,
               success: function(data) {
                 if (data['error']) {
-                  console.log(data);
+                  $('#question').hide();
+                  $('#answers').hide();
+                  $('#result').text("Error: " + data['error']);
+                  $('#result').show();
                 } else if (data['success']) {
                   $('#question').hide();
                   $('#answers').hide();
