--- a/client/index.html
+++ b/client/index.html
@@ -21,14 +21,14 @@
       #dialogue {
         z-index:0;
         position:absolute;
-        right:25.5em;
+        right:14.5em;
         top:8.25em;
         width: 300px;
       }
 
       #qa_container {
         position: absolute;
-        right:25.2em;
+        right:14.2em;
         top:10em;
       }
 
@@ -44,6 +44,10 @@
         height:auto;
         z-index:1000;
         text-align:left;
+      }
+
+      .answer {
+        cursor: pointer;
       }
     </style>
     <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
